--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@demox-labs/miden-sdk": "^0.10.1",
+    "@demox-labs/miden-wallet-adapter": "^0.3.3",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-slot": "^1.2.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
@@ -18,10 +22,17 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "10.4.20",
+    "class-variance-authority": "^0.7.1",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "lucide-react": "^0.544.0",
+    "postcss": "8.4.49",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "3.4.13",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
