--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
+    "react-rough-notation": "^1.0.8",
     "react-router": "^7.9.3",
     "zod": "^4.1.12"
   },
