--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
     "react-rough-notation": "^1.0.8",
     "react-router": "^7.9.3",
+    "sonner": "^2.0.7",
     "zod": "^4.1.12"
   },
   "devDependencies": {
