--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "test:browser": "vitest --browser.headless"
+    "test:browser": "vitest --browser.headless",
+    "prepare": "husky"
   },
   "dependencies": {
     "@demox-labs/miden-sdk": "^0.11.11",
@@ -49,6 +50,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "husky": "^9.1.7",
     "lucide-react": "^0.544.0",
     "playwright": "^1.56.1",
     "postcss": "8.4.49",
