--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "motion": "^12.23.24",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
     "react-rough-notation": "^1.0.8",
     "react-router": "^7.9.3",
+    "react-use-measure": "^2.1.7",
     "sonner": "^2.0.7",
     "zod": "^4.1.12"
   },
