--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lucide-react": "^0.544.0",
     "playwright": "^1.56.1",
     "postcss": "8.4.49",
+    "shadcn": "^3.6.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "3.4.13",
     "tailwindcss-animate": "^1.0.7",
