feat: implement admin dashboard with session-based auth
- Add dashboard login page with session cookie authentication
- Add dashboard main page with auto-refresh (30s)
- Display blockchain status, system stats, recent domains
- Add telegram notification toggle switch
- Add reset store button with confirmation dialog
- Add new UI components (table, switch, alert-dialog)
- Separate routing from wallet-based auth

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,8 @@ VITE_MIDEN_FAUCET_ID_BECH32=mtst1ap2t7nsjausqsgrswk9syfzkcu328yna_qruqqypuyph
 # API Configuration
 VITE_API_BASE=https://your-backend-api.com
 
+# Dashboard API Configuration (admin dashboard)
+VITE_DASHBOARD_API_BASE=http://localhost:3081
+
 # File Upload Configuration (in bytes)
 VITE_MAX_FILE_SIZE=5242880
